--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     
     <h2></h2>
     <h1>Soumili Dey</h1>
-    <img src ="images/headshot.jpg" alt ="Image of a female in an orange top in front 
+    <img src ="headshot.jpg" alt ="Image of a female in an orange top in front 
     of a couple of Boston skyscapers in the distance" width = 180 height = 200/>
 
     <p class = A> Click the above image to see who my favorite movie character is!</p>
    
-    <img src ="images/acadia-park.jpg" alt ="Image of a female in front of a cliff
+    <img src ="acadia-park.jpg" alt ="Image of a female in front of a cliff
     in Acadia National Park" width = 180 height = 200/>
     
 
