--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soumili's Website</title>
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css?family=Fira+Sans"
         rel="stylesheet" />
@@ -46,7 +46,7 @@
     
     </p>  
     <button>Change user</button>
-    <script src="scripts/main.js"></script>  
+    <script src="main.js"></script>  
 
 </body>
 </html>
